--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title> TEMPLATE EJEMPLO </title>
-  </head>
-  <body>
-    <h1> Template Ejemplo </h1>
-    <p>
-      <ul>
-        {% for ejemplo in lista_ejemplo %}
-        <h3>
-        <li> {{ejemplo.nombre}} </li>
-        </h3>
-        {% endfor %}
-      </ul>
-    </p>
-  </body>
-</html>
+{% extends 'indexstartbootstrap.html' %}
+
+
+{% block title %}
+<title>HerenciaEjemplo</title>
+{% endblock title %}
+
+{% block title_h1 %}
+<h1 class="mb-5">Una humilde página <p>template</p></h1>
+{% endblock title_h1 %}
+
+{% block pie_header %}
+  <p>
+    <ul>
+      {% for ejemplo in lista_ejemplo %}
+      <li> {{ejemplo.nombre}} </li>
+      {% endfor %}
+    </ul>
+  </p>
+{% endblock pie_header %}
