--- a/templates/index_herencia.html
+++ b/templates/index_herencia.html
@@ -1,4 +1,4 @@
-{% extends 'indexstartbootstrap.html' %}
+{% extends 'base_templates.html' %}
 
 
 {% block title %}
@@ -6,7 +6,7 @@
 {% endblock title %}
 
 {% block title_h1 %}
-<h1 class="mb-5">Una humilde página <p>template</p></h1>
+<h1 class="mb-5">Una humilde página <p>Template</p></h1>
 {% endblock title_h1 %}
 
 {% block pie_header %}
