--- a/templates/index_1.html
+++ b/templates/index_1.html
@@ -1,6 +1,22 @@
 {% extends 'base_templates.html' %}
-{% load static %}
+
 
 {% block title %}
-<title>Index Nuevo</title>
+<title>Home</title>
 {% endblock title %}
+
+{% block header %}
+<header class="masthead">
+  <div class="container position-relative">
+    <div class="row justify-content-center">
+      <div class="col-xl-6">
+        <div class="text-center text-white">
+          {% block title_h1 %}
+          <h1 class="mb-5">Una humilde página</h1>
+          {% endblock title_h1 %}
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
+{% endblock header %}
