--- a/templates/base_templates.html
+++ b/templates/base_templates.html
@@ -24,14 +24,14 @@
   <!-- Navigation-->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      <a class="navbar-brand" href="#!">Santiago Lopez</a>
+      <h3>Santiago Lopez</h3>
     </div>
   </nav>
   <!-- Masthead-->
   {% block header %}
   {% block title_h1 %}{% endblock title_h1 %}
   {% endblock header %}
-  
+
   {% block pie_header %}
   {% endblock pie_header %}
   <!-- Footer-->
@@ -40,31 +40,17 @@
       <div class="row">
         <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
           <ul class="list-inline mb-2">
-            <li class="list-inline-item"><a href="#!">About</a></li>
+            <li class="list-inline-item"><a href={% url 'home' %}>Home</a></li>
             <li class="list-inline-item">⋅</li>
-            <li class="list-inline-item"><a href="#!">Contact</a></li>
+            <li class="list-inline-item"><a href={% url 'herencia_ejemplo' %}>Template</a></li>
             <li class="list-inline-item">⋅</li>
-            <li class="list-inline-item"><a href="#!">Terms of Use</a></li>
-            <li class="list-inline-item">⋅</li>
-            <li class="list-inline-item"><a href="#!">Privacy Policy</a></li>
           </ul>
           <p class="text-muted small mb-4 mb-lg-0">&copy; Your Humble Website 2022. All rights are not reserved.</p>
         </div>
-        <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
-          <ul class="list-inline mb-0">
-            <li class="list-inline-item me-4">
-              <a href="#!"><i class="bi-facebook fs-3"></i></a>
-            </li>
-            <li class="list-inline-item me-4">
-              <a href="#!"><i class="bi-twitter fs-3"></i></a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#!"><i class="bi-instagram fs-3"></i></a>
-            </li>
+
           </ul>
         </div>
       </div>
-    </div>
   </footer>
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
