--- a/templates/base_templates.html
+++ b/templates/base_templates.html
@@ -38,8 +38,9 @@
         <ul class="list-inline mb-2">
           <li class="list-inline-item"><a href={% url 'home' %}>Home</a></li>
           <li class="list-inline-item">⋅</li>
-          <li class="list-inline-item"><a href={% url 'herencia_ejemplo' %}>Template</a></li>
+          <li class="list-inline-item"><a href={% url 'listado_santi' %}>Santis</a></li>
           <li class="list-inline-item">⋅</li>
+          <li class="list-inline-item"><a href={% url 'about' %}>Acerca de nosotros</a></li>
         </ul>
         <p class="text-muted small mb-4 mb-lg-0">&copy; Your Humble Website 2022. All rights are not reserved.</p>
       </div>
